# amls-gan

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
amls_gan/: __init__.py  _math.py  trainer.py  typing_utils.py
amls_gan/datasets/: __init__.py  _envs.py  celeba.py  cifar10.py  mnist.py  module.py
amls_gan/models/: dcgan.py  gan.py  mlp_gan.py  transforms.py
tests/amls_gan/models/: test_gan.py  test_mlp_gan.py
