[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Project

[project]
name = "amls-gan"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # training
    "torch>=2.0",
    "torchvision",
    "tensorboard",
    "torch-tb-profiler",
    # images
    "Pillow",
    # utils
    "tqdm",
    "environs",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # testing
    "pytest",
    # format
    "black",
    "isort",
    # lint
    "flake8",
    # exploration
    "ipython",
    "jupyter",
    "matplotlib",
]

# Tools

[tool.setuptools]
packages = ["amls_gan"]

[tool.black]
line-length = 100

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true
